# hack_a_war

./: .dockerignore  .env.example  .gitignore  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test.json  test_agents.py
.github/workflows/: deploy.yml  manual-deploy.yml  pr-check.yml
agents/: action_planner.py  extractor.py  graph.py  impact_analyst.py  scanner.py  state.py  validator.py
api/: auth.py  main.py  progress_store.py
api/routes/: actions.py  alerts.py  ask.py  compliance.py  controls.py  cve.py  health.py  regulations.py  reports.py  stream.py  upload.py
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/demo/: page.tsx
dashboard/src/app/demo/components/: ActionPlan.tsx  AgentTrace.tsx  AlertsPanel.tsx  AskReforge.tsx  ConflictDetection.tsx  DriftScore.tsx  FeedMonitor.tsx  ImpactAnalysis.tsx  JurisdictionFilter.tsx  OnboardUpload.tsx  ProactiveAlerts.tsx  ResultsView.tsx
dashboard/src/app/demo/lib/: api.ts
dashboard/src/components/: cta.tsx  feature-sections.tsx  features.tsx  footer.tsx  frameworks.tsx  hero.tsx  integrations.tsx  nav.tsx  pipeline.tsx  social-proof.tsx  statement.tsx
docker/: Dockerfile.api  Dockerfile.frontend  init.sql
ingestion/chunkers/: semantic_chunker.py
ingestion/connectors/: __init__.py  base.py  eur_lex.py  federal_register.py  nvd.py  osv.py  sebi.py
ingestion/parsers/: document_parser.py
ingestion/pipelines/: ingestion_flow.py
knowledge/embeddings/: vertex_embeddings.py
knowledge/graph/: neo4j_client.py  triplet_extractor.py
knowledge/regulatory/: fine_schedules.json
knowledge/security/: blast_radius.py  cve_control_mapper.py
knowledge/vectors/: qdrant_store.py
monitoring/: horizon_scanner.py  proactive_scanner.py  prometheus.yml  regulation_differ.py
nginx/: nginx.conf
org_context/: __init__.py
org_context/models/: __init__.py  database.py  schemas.py
org_context/registry/: __init__.py  control_registry.py
scripts/: deploy.sh  setup-ec2.sh  upload-to-ec2.ps1
storage/: db.py  minio_client.py  supabase_client.py
